test/fails/bad_types/auto2.lgl
void main() {
    auto m = [[1., 2.], [1., 2.]];
}